# HSE-FCS-SE-CPP

./: README.md
big_integer/: CMakeLists.txt  main.cpp  tests.cpp
big_integer/big_integer_lib/: big_int.cpp  big_int.h
